package fonction removed from project

--- a/project_06/project_06.runs/impl_1/usage_statistics_webtalk.html
+++ b/project_06/project_06.runs/impl_1/usage_statistics_webtalk.html
@@ -4,11 +4,11 @@
   <TR ALIGN='CENTER' BGCOLOR='#A7BFDE'><TD COLSPAN='4'><B>software_version_and_target_device</B></TD></TR>
 <TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>beta</B></TD><TD>FALSE</TD>
   <TD BGCOLOR='#DBE5F1'><B>build_version</B></TD><TD>2902540</TD>
-</TR><TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>date_generated</B></TD><TD>Fri Aug 23 12:33:14 2024</TD>
+</TR><TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>date_generated</B></TD><TD>Fri Aug 23 15:13:38 2024</TD>
   <TD BGCOLOR='#DBE5F1'><B>os_platform</B></TD><TD>WIN64</TD>
 </TR><TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>product_version</B></TD><TD>Vivado v2020.1 (64-bit)</TD>
   <TD BGCOLOR='#DBE5F1'><B>project_id</B></TD><TD>6b46deaaeb524062b5a9a57ac23db863</TD>
-</TR><TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>project_iteration</B></TD><TD>11</TD>
+</TR><TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>project_iteration</B></TD><TD>12</TD>
   <TD BGCOLOR='#DBE5F1'><B>random_id</B></TD><TD>7268a95b35745f39bec2726a57cd0d57</TD>
 </TR><TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>registration_id</B></TD><TD>212570348_0_0_240</TD>
   <TD BGCOLOR='#DBE5F1'><B>route_design</B></TD><TD>TRUE</TD>
@@ -37,9 +37,9 @@
    <TD>addsrcwizard_specify_hdl_netlist_block_design=1</TD>
 </TR><TR ALIGN='LEFT'>   <TD>addsrcwizard_specify_or_create_constraint_files=1</TD>
    <TD>assigndebugnetdialog_debug_cores_tree_table=2</TD>
-   <TD>basedialog_cancel=36</TD>
-   <TD>basedialog_ok=95</TD>
-</TR><TR ALIGN='LEFT'>   <TD>basedialog_yes=23</TD>
+   <TD>basedialog_cancel=38</TD>
+   <TD>basedialog_ok=96</TD>
+</TR><TR ALIGN='LEFT'>   <TD>basedialog_yes=24</TD>
    <TD>boardinterfaceconnectiondialog_tree_table=7</TD>
    <TD>boardtreepanel_auto_connect=1</TD>
    <TD>boardtreepanel_board_tree_panel=35</TD>
@@ -47,7 +47,7 @@
    <TD>boardtreepanel_disconnect_board_component=5</TD>
    <TD>checktimingresulttreetablepanel_check_timing_result_tree_table=6</TD>
    <TD>closeplanner_yes=1</TD>
-</TR><TR ALIGN='LEFT'>   <TD>cmdmsgdialog_ok=10</TD>
+</TR><TR ALIGN='LEFT'>   <TD>cmdmsgdialog_ok=13</TD>
    <TD>constraintschooserpanel_add_files=1</TD>
    <TD>constraintschooserpanel_file_table=3</TD>
    <TD>corebrowserview_group_cores_by_taxonomy_or_repository=1</TD>
@@ -72,24 +72,24 @@
    <TD>deviceconstraintsview_internal_vref_tree=5</TD>
    <TD>expreporttreepanel_exp_report_tree_table=9</TD>
 </TR><TR ALIGN='LEFT'>   <TD>expruntreepanel_exp_run_tree_table=8</TD>
-   <TD>filesetpanel_file_set_panel_tree=152</TD>
+   <TD>filesetpanel_file_set_panel_tree=165</TD>
    <TD>filterednetswarningdialog_ok=1</TD>
    <TD>findandpicknetsdialog_nets_tree_table_panel=4</TD>
 </TR><TR ALIGN='LEFT'>   <TD>finder_add_new_criterion=2</TD>
    <TD>finder_remove_this_criterion=1</TD>
    <TD>findinfilesview_root=6</TD>
    <TD>floorplaneditor_metric=1</TD>
-</TR><TR ALIGN='LEFT'>   <TD>flownavigatortreepanel_flow_navigator_tree=139</TD>
+</TR><TR ALIGN='LEFT'>   <TD>flownavigatortreepanel_flow_navigator_tree=148</TD>
    <TD>gettingstartedview_open_project=2</TD>
    <TD>graphicalview_zoom_fit=2</TD>
    <TD>hacgcipsymbol_show_disabled_ports=1</TD>
 </TR><TR ALIGN='LEFT'>   <TD>hardwaredashboardoptionspanel_close_dashboard_options=1</TD>
    <TD>hardwaredashboardoptionspanel_layer_tree=4</TD>
    <TD>hardwaredashboardview_show_dashboard_options=2</TD>
-   <TD>hardwareilawaveformview_run_trigger_for_this_ila_core=68</TD>
-</TR><TR ALIGN='LEFT'>   <TD>hardwareilawaveformview_run_trigger_immediate_for_this_ila_core=70</TD>
+   <TD>hardwareilawaveformview_run_trigger_for_this_ila_core=95</TD>
+</TR><TR ALIGN='LEFT'>   <TD>hardwareilawaveformview_run_trigger_immediate_for_this_ila_core=80</TD>
    <TD>hardwareilawaveformview_stop_trigger_for_this_ila_core=4</TD>
-   <TD>hardwareilawaveformview_toggle_auto_re_trigger_mode=20</TD>
+   <TD>hardwareilawaveformview_toggle_auto_re_trigger_mode=21</TD>
    <TD>hardwaresiolinksview_create=2</TD>
 </TR><TR ALIGN='LEFT'>   <TD>hardwaretreepanel_hardware_tree_table=89</TD>
    <TD>hinputhandler_toggle_line_comments=2</TD>
@@ -104,24 +104,24 @@
    <TD>ipcoreview_tabbed_pane=1</TD>
    <TD>labtoolsmenu_jtag_scan_rate=2</TD>
 </TR><TR ALIGN='LEFT'>   <TD>labtoolsmenu_name=2</TD>
-   <TD>mainmenumgr_checkpoint=18</TD>
-   <TD>mainmenumgr_constraints=8</TD>
+   <TD>mainmenumgr_checkpoint=20</TD>
+   <TD>mainmenumgr_constraints=9</TD>
    <TD>mainmenumgr_edit=16</TD>
-</TR><TR ALIGN='LEFT'>   <TD>mainmenumgr_export=24</TD>
-   <TD>mainmenumgr_file=42</TD>
+</TR><TR ALIGN='LEFT'>   <TD>mainmenumgr_export=27</TD>
+   <TD>mainmenumgr_file=46</TD>
    <TD>mainmenumgr_floorplanning=4</TD>
    <TD>mainmenumgr_flow=16</TD>
 </TR><TR ALIGN='LEFT'>   <TD>mainmenumgr_help=8</TD>
-   <TD>mainmenumgr_import=16</TD>
+   <TD>mainmenumgr_import=19</TD>
    <TD>mainmenumgr_io=2</TD>
    <TD>mainmenumgr_io_planning=5</TD>
-</TR><TR ALIGN='LEFT'>   <TD>mainmenumgr_ip=19</TD>
+</TR><TR ALIGN='LEFT'>   <TD>mainmenumgr_ip=21</TD>
    <TD>mainmenumgr_open=2</TD>
    <TD>mainmenumgr_open_block_design=1</TD>
-   <TD>mainmenumgr_project=16</TD>
+   <TD>mainmenumgr_project=18</TD>
 </TR><TR ALIGN='LEFT'>   <TD>mainmenumgr_reports=42</TD>
    <TD>mainmenumgr_settings=1</TD>
-   <TD>mainmenumgr_text_editor=18</TD>
+   <TD>mainmenumgr_text_editor=21</TD>
    <TD>mainmenumgr_timing=5</TD>
 </TR><TR ALIGN='LEFT'>   <TD>mainmenumgr_tools=40</TD>
    <TD>mainmenumgr_unselect_type=1</TD>
@@ -150,7 +150,7 @@
 </TR><TR ALIGN='LEFT'>   <TD>pacommandnames_add_sources=2</TD>
    <TD>pacommandnames_addresseditor_window=1</TD>
    <TD>pacommandnames_assign_debug_net=2</TD>
-   <TD>pacommandnames_auto_connect_target=7</TD>
+   <TD>pacommandnames_auto_connect_target=8</TD>
 </TR><TR ALIGN='LEFT'>   <TD>pacommandnames_auto_update_hier=22</TD>
    <TD>pacommandnames_close_project=1</TD>
    <TD>pacommandnames_create_debug_core=3</TD>
@@ -163,7 +163,7 @@
    <TD>pacommandnames_device_view=3</TD>
    <TD>pacommandnames_edit_constraint_sets=1</TD>
    <TD>pacommandnames_enable_auto_retrigger=1</TD>
-</TR><TR ALIGN='LEFT'>   <TD>pacommandnames_export_hardware=12</TD>
+</TR><TR ALIGN='LEFT'>   <TD>pacommandnames_export_hardware=13</TD>
    <TD>pacommandnames_fileset_window=2</TD>
    <TD>pacommandnames_hardware_sio_links_window=2</TD>
    <TD>pacommandnames_hardware_window=1</TD>
@@ -199,13 +199,13 @@
    <TD>pacommandnames_verify_device=1</TD>
    <TD>pagraphicalview_view=1</TD>
    <TD>paviews_address_editor=1</TD>
-</TR><TR ALIGN='LEFT'>   <TD>paviews_code=7</TD>
-   <TD>paviews_dashboard=7</TD>
-   <TD>paviews_device=17</TD>
+</TR><TR ALIGN='LEFT'>   <TD>paviews_code=8</TD>
+   <TD>paviews_dashboard=8</TD>
+   <TD>paviews_device=18</TD>
    <TD>paviews_ip_catalog=1</TD>
 </TR><TR ALIGN='LEFT'>   <TD>paviews_package=2</TD>
    <TD>paviews_par_report=3</TD>
-   <TD>paviews_project_summary=16</TD>
+   <TD>paviews_project_summary=17</TD>
    <TD>paviews_schematic=3</TD>
 </TR><TR ALIGN='LEFT'>   <TD>paviews_system_monitor=1</TD>
    <TD>paviews_timing_constraints=1</TD>
@@ -215,12 +215,12 @@
    <TD>probesview_probes_tree=1</TD>
    <TD>probevaluetablepanel_text_field=3</TD>
    <TD>programdebugtab_open_target=2</TD>
-</TR><TR ALIGN='LEFT'>   <TD>programdebugtab_program_device=6</TD>
+</TR><TR ALIGN='LEFT'>   <TD>programdebugtab_program_device=8</TD>
    <TD>programdebugtab_refresh_device=5</TD>
    <TD>programfpgadialog_check_end_of_startup=1</TD>
-   <TD>programfpgadialog_program=18</TD>
+   <TD>programfpgadialog_program=22</TD>
 </TR><TR ALIGN='LEFT'>   <TD>programfpgadialog_specify_bitstream_file=3</TD>
-   <TD>progressdialog_background=8</TD>
+   <TD>progressdialog_background=9</TD>
    <TD>progressdialog_cancel=1</TD>
    <TD>projecttab_close_design=2</TD>
 </TR><TR ALIGN='LEFT'>   <TD>projecttab_reload=3</TD>
@@ -231,9 +231,9 @@
    <TD>rdicommands_delete=5</TD>
    <TD>rdicommands_find=1</TD>
    <TD>rdicommands_properties=12</TD>
-</TR><TR ALIGN='LEFT'>   <TD>rdicommands_save_file=6</TD>
+</TR><TR ALIGN='LEFT'>   <TD>rdicommands_save_file=7</TD>
    <TD>rdicommands_settings=1</TD>
-   <TD>rdiviews_waveform_viewer=122</TD>
+   <TD>rdiviews_waveform_viewer=130</TD>
    <TD>rsbapplyautomationbar_run_block_automation=1</TD>
 </TR><TR ALIGN='LEFT'>   <TD>rsbapplyautomationbar_run_connection_automation=5</TD>
    <TD>rsbbaseporttablepanel_pins_table=2</TD>
@@ -287,7 +287,7 @@
    <TD>addsources=4</TD>
    <TD>assigndebugnet=2</TD>
 </TR><TR ALIGN='LEFT'>   <TD>autoconnectboardcomp=2</TD>
-   <TD>autoconnecttarget=6</TD>
+   <TD>autoconnecttarget=7</TD>
    <TD>closeproject=1</TD>
    <TD>coreview=2</TD>
 </TR><TR ALIGN='LEFT'>   <TD>createblockdesign=2</TD>
@@ -301,55 +301,56 @@
 </TR><TR ALIGN='LEFT'>   <TD>editdelete=5</TD>
    <TD>editpaste=7</TD>
    <TD>editproperties=16</TD>
-   <TD>editundo=2</TD>
+   <TD>editundo=5</TD>
 </TR><TR ALIGN='LEFT'>   <TD>enableautoretrigger=1</TD>
    <TD>fileexit=1</TD>
    <TD>highglightdefaultcolor=1</TD>
    <TD>launchopentarget=1</TD>
-</TR><TR ALIGN='LEFT'>   <TD>launchprogramfpga=25</TD>
+</TR><TR ALIGN='LEFT'>   <TD>launchprogramfpga=29</TD>
    <TD>launchvitis=2</TD>
    <TD>makersbconnection=2</TD>
    <TD>markdebug=2</TD>
-</TR><TR ALIGN='LEFT'>   <TD>newexporthardware=12</TD>
+</TR><TR ALIGN='LEFT'>   <TD>newexporthardware=13</TD>
    <TD>newhardwaredashboard=8</TD>
    <TD>openaddresseditor=1</TD>
    <TD>opendeviceview=3</TD>
 </TR><TR ALIGN='LEFT'>   <TD>openhardwaredashboard=1</TD>
-   <TD>openhardwaremanager=30</TD>
+   <TD>openhardwaremanager=33</TD>
    <TD>openpackageview=2</TD>
    <TD>openproject=2</TD>
-</TR><TR ALIGN='LEFT'>   <TD>openrecenttarget=20</TD>
+</TR><TR ALIGN='LEFT'>   <TD>openrecenttarget=22</TD>
    <TD>openrsbhierarchyblock=1</TD>
    <TD>pinallrsbincanvas=1</TD>
-   <TD>programdevice=20</TD>
+   <TD>programdevice=22</TD>
 </TR><TR ALIGN='LEFT'>   <TD>projectsummary=1</TD>
    <TD>refreshdevice=4</TD>
    <TD>regeneratersblayout=4</TD>
-   <TD>runbitgen=26</TD>
+   <TD>runbitgen=27</TD>
 </TR><TR ALIGN='LEFT'>   <TD>runimplementation=10</TD>
    <TD>runschematic=6</TD>
-   <TD>runsynthesis=4</TD>
-   <TD>runtrigger=74</TD>
-</TR><TR ALIGN='LEFT'>   <TD>runtriggerimmediate=99</TD>
+   <TD>runsynthesis=5</TD>
+   <TD>runtrigger=101</TD>
+</TR><TR ALIGN='LEFT'>   <TD>runtriggerimmediate=109</TD>
    <TD>savedesign=3</TD>
+   <TD>savefileproxyhandler=1</TD>
    <TD>saversbdesign=2</TD>
-   <TD>settopnode=8</TD>
-</TR><TR ALIGN='LEFT'>   <TD>showbusplot=4</TD>
+</TR><TR ALIGN='LEFT'>   <TD>settopnode=8</TD>
+   <TD>showbusplot=4</TD>
    <TD>showconnectivity=2</TD>
    <TD>showview=31</TD>
-   <TD>stoptrigger=5</TD>
-</TR><TR ALIGN='LEFT'>   <TD>tclfind=1</TD>
+</TR><TR ALIGN='LEFT'>   <TD>stoptrigger=6</TD>
+   <TD>tclfind=1</TD>
    <TD>toolssettings=2</TD>
    <TD>unmarkdebug=2</TD>
-   <TD>unpinrsbincanvas=1</TD>
-</TR><TR ALIGN='LEFT'>   <TD>unselectallcmdhandler=1</TD>
+</TR><TR ALIGN='LEFT'>   <TD>unpinrsbincanvas=1</TD>
+   <TD>unselectallcmdhandler=1</TD>
    <TD>validatersbdesign=10</TD>
    <TD>verifydevice=1</TD>
-   <TD>viewlayoutcmd=3</TD>
-</TR><TR ALIGN='LEFT'>   <TD>viewtaskimplementation=3</TD>
+</TR><TR ALIGN='LEFT'>   <TD>viewlayoutcmd=3</TD>
+   <TD>viewtaskimplementation=3</TD>
    <TD>viewtaskrtlanalysis=1</TD>
-   <TD>viewtasksynthesis=2</TD>
-   <TD>writesioscan=1</TD>
+   <TD>viewtasksynthesis=4</TD>
+</TR><TR ALIGN='LEFT'>   <TD>writesioscan=1</TD>
 </TR>  </TABLE>
 </TR><TR ALIGN='LEFT'>  <TABLE BORDER='1' CELLSPACING='0' WIDTH='100%'>
    <TR ALIGN='CENTER' BGCOLOR='#DBE5F1'><TD COLSPAN='4'><B>other_data</B></TD></TR>
@@ -4299,7 +4300,7 @@
     <TD>output_load=5.000000</TD>
 </TR><TR ALIGN='LEFT'>    <TD>output_toggle=12.500000</TD>
     <TD>package=clg484</TD>
-    <TD>pct_clock_constrained=1.000000</TD>
+    <TD>pct_clock_constrained=2.000000</TD>
     <TD>pct_inputs_defined=0</TD>
 </TR><TR ALIGN='LEFT'>    <TD>platform=nt64</TD>
     <TD>process=typical</TD>
@@ -4721,10 +4722,10 @@
    <TR><TD>
    <TABLE BORDER='1' CELLSPACING='0' WIDTH='100%'>
     <TR ALIGN='CENTER' BGCOLOR='#DBE5F1'><TD COLSPAN='4'><B>usage</B></TD></TR>
-<TR ALIGN='LEFT'>    <TD>elapsed=00:00:36s</TD>
+<TR ALIGN='LEFT'>    <TD>elapsed=00:00:32s</TD>
     <TD>hls_ip=0</TD>
-    <TD>memory_gain=129.078MB</TD>
-    <TD>memory_peak=1228.457MB</TD>
+    <TD>memory_gain=139.875MB</TD>
+    <TD>memory_peak=1223.418MB</TD>
 </TR>   </TABLE>
    </TD></TR>
   </TABLE><BR>
